--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   otp_text_field: ^1.1.3
+  firebase_auth: ^4.6.2
+  smooth_page_indicator: ^1.1.0
+  bloc: ^8.0.0
+  flutter_bloc: ^8.0.0
 
 dev_dependencies:
   flutter_test:
