--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   bloc: ^8.0.0
   flutter_bloc: ^8.0.0
+  google_fonts: ^5.1.0
+  decimal: ^2.3.3
+  intl: ^0.18.1
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
